fix(search): Fix 'iOS issue: the X used for clearing in the search bar is cut off a little at the end'

--- a/components/interactables/Search/Input/Input.less
+++ b/components/interactables/Search/Input/Input.less
@@ -50,7 +50,7 @@
   font-size: @tiny-icon-size;
   top: 5px;
   right: 8px;
-  width: 30px;
+  width: 34px;
   height: 20px;
   background: transparent;
   border-color: transparent;
